--- a/gfarm_v2/trunk/regress/Makefile
+++ b/gfarm_v2/trunk/regress/Makefile
@@ -18,7 +18,8 @@ SUBDIRS=	\
 	lib/libgfarm/gfarm/gfs_stat_cached \
 	lib/libgfarm/gfarm/gfs_xattr \
 	lib/libgfarm/gfarm/gfs_getxattr_cached \
-	lib/libgfarm/gfarm/gfm_inode_or_name_op_test
+	lib/libgfarm/gfarm/gfm_inode_or_name_op_test \
+	server/gfmd/db_journal
 
 check test: all
 	@echo ""
