--- a/gfarm_v2/trunk/gftool/config-gfarm/config-gfarm-update.in
+++ b/gfarm_v2/trunk/gftool/config-gfarm/config-gfarm-update.in
@@ -12,6 +12,7 @@ unset LANG
 prefix="@prefix@"
 sysconfdir="@sysconfdir@"
 config_dir="@datadir@/gfarm/config"
+enable_metadata_replication="@enable_metadata_replication@"
 
 PATH="${prefix}/bin:${prefix}/sbin:/bin:/usr/bin:/sbin:/usr/sbin:/usr/ucb:/usr/pkg/bin:/usr/pkg/sbin:/usr/local/bin:/usr/local/sbin:$PATH"
 export PATH
@@ -51,6 +52,9 @@ usage()
 	echo >&2 "	[-P backend_prefix]	- installation prefix of the backend program"
 	echo >&2 "	[-l metadata_directory]	- backend database data directory"
 	echo >&2 "	[-f backend_file]"
+	if [ "${enable_metadata_replication}" = "yes" ]; then
+		echo >&2 "	[-j metadb_journal_dir] - metadata journal directory"
+	fi
 	update_usage_$BACKEND_TYPE ||
 		echo >&2 "	no option for backend=$BACKEND_TYPE"
 	exit 1
@@ -88,7 +92,28 @@ display_params()
     display_backend_optional_params_$BACKEND_TYPE
 
     update_sanity
+    if [ "${enable_metadata_replication}" = "yes" ]; then
+        echo "metadata journal directory [-j]: $METADATA_JOURNAL_DIR"
+    fi
+
     exit 0
+}
+
+update_metadata_replication()
+{
+    if [ "${enable_metadata_replication}" != "yes" ]; then
+        return;
+    fi
+
+    if $MAKE_METADATA_JOURNAL_DIR; then
+        if [ -e "$METADATA_JOURNAL_DIR/0000000000.gmj" ]; then
+            echo >&2 "journal file already exists in $METADATA_JOURNAL_DIR."
+            exit 1
+        fi
+        [ -d $METADATA_JOURNAL_DIR ] || mkdir -p $METADATA_JOURNAL_DIR
+        [ -e $METADATA_JOURNAL_DIR ] && chmod 700 $METADATA_JOURNAL_DIR
+        echo "metadb_journal_dir $METADATA_JOURNAL_DIR" >> $GFMD_CONF
+    fi
 }
 
 #
@@ -112,6 +137,9 @@ while [ $# -gt 0 ] ; do
 		;;
 	  -f) shift; [ $# -ge 1 ] || usage
 		BACKEND_OPTIONS="$BACKEND_OPTIONS -f $1"
+		;;
+	  -j) shift; [ $# -ge 1 ] || usage
+		METADATA_JOURNAL_DIR0=$1
 		;;
 
 	# control options
@@ -150,6 +178,18 @@ fi
 # sanity check
 if [ ! -f ${GFMD_CONF} ]; then
 	ABORT "${PROGNAME}: cannot find ${GFMD_CONF}, --prefix option required"
+fi
+
+# set replication parameters
+if [ "${enable_metadata_replication}" = "yes" ]; then
+        METADATA_JOURNAL_DIR=`getvalue metadb_journal_dir`
+        if [ "$METADATA_JOURNAL_DIR" = "" ]; then
+                MAKE_METADATA_JOURNAL_DIR=true
+                : ${METADATA_JOURNAL_DIR:="$METADATA_JOURNAL_DIR0"}
+                : ${METADATA_JOURNAL_DIR:="/var/gfarm-metadata/journal"}
+        else
+                MAKE_METADATA_JOURNAL_DIR=false
+	fi
 fi
 
 # determine a backend database type
@@ -197,8 +237,19 @@ $DISPLAY_PARAMS && display_params
 
 update_postprocess_$BACKEND_TYPE || ABORT "aborted"
 
+# for replication
+if [ "${enable_metadata_replication}" = "yes" ]; then
+	if [ "$METADATA_JOURNAL_DIR" = "" ]; then
+		METADATA_JOURNAL_DIR=/var/gfarm-metadata/journal
+		echo "metadb_journal_dir $METADATA_JOURNAL_DIR" >> $GFMD_CONF
+		-d $METADATA_JOURNAL_DIR || mkdir -p $METADATA_JOURNAL_DIR
+		-e $METADATA_JOURNAL_DIR && chmod 700 $METADATA_JOURNAL_DIR
+	fi
+fi
+
 #
 if $UPDATE; then
+	update_metadata_replication
 	update_$BACKEND_TYPE
 else
 	update_access_db_$BACKEND_TYPE $BACKEND_OPTIONS
