--- a/gfarm_v2/trunk/include/gfarm/gfarm_config.h.in
+++ b/gfarm_v2/trunk/include/gfarm/gfarm_config.h.in
@@ -11,6 +11,9 @@
 /* support XML extended attributs and searching by XPath */
 #undef ENABLE_XMLATTR
 
+/* support metadata replication */
+#undef ENABLE_METADATA_REPLICATION
+
 /* Define to 1 if you have the <byteswap.h> header file. */
 #undef HAVE_BYTESWAP_H
 
