add trying to connect to multiple gfmd configured by metadb_server_list.
* add struct gfarm_filesystem which aggregates struct gfarm_metadb_server.

--- a/gfarm_v2/trunk/lib/libgfarm/gfarm/Makefile
+++ b/gfarm_v2/trunk/lib/libgfarm/gfarm/Makefile
@@ -48,6 +48,7 @@ SRCS = \
 	auth_server_uid.c \
 	conn_hash.c \
 	conn_cache.c \
+	filesystem.c \
 	gfm_client.c \
 	gfs_client.c \
 	gfm_schedule.c \
@@ -128,6 +129,7 @@ OBJS = \
 	auth_server_uid.lo \
 	conn_hash.lo \
 	conn_cache.lo \
+	filesystem.lo \
 	gfm_client.lo \
 	gfs_client.lo \
 	gfm_schedule.lo \
@@ -204,11 +206,12 @@ auth_server.lo: $(GFUTIL_SRCDIR)/gfutil.h liberror.h hostspec.h auth.h gfp_xdr.h
 auth_server_gsi.lo: $(GFSL_SRCDIR)/gfarm_secure_session.h $(GFSL_SRCDIR)/gfarm_auth.h $(GFUTIL_SRCDIR)/gfutil.h io_fd.h io_gfsl.h auth.h auth_gsi.h
 auth_server_uid.lo: $(GFUTIL_SRCDIR)/gfutil.h auth.h gfm_client.h
 auth_server_uid_gsi.lo: $(GFUTIL_SRCDIR)/gfutil.h auth.h gfm_client.h
-config.lo: $(GFUTIL_SRCDIR)/gfutil.h liberror.h patmatch.h hostspec.h param.h sockopt.h host.h auth.h gfpath.h config.h gfm_proto.h gfs_proto.h $(top_builddir)/makes/config.mk # $(GFARM_CONFIG) -> $(sysconfdir)
+config.lo: $(GFUTIL_SRCDIR)/gfutil.h liberror.h patmatch.h hostspec.h param.h sockopt.h host.h auth.h gfpath.h config.h gfm_proto.h gfs_proto.h $(top_builddir)/makes/config.mk metadb_server.h filesystem.h # $(GFARM_CONFIG) -> $(sysconfdir)
 conn_hash.lo: $(GFUTIL_SRCDIR)/hash.h conn_hash.h
 error.lo: $(GFUTIL_SRCDIR)/hash.h
 conn_cache.lo: $(GFUTIL_SRCDIR)/hash.h $(GFUTIL_SRCDIR)/lru_cache.h conn_hash.h conn_cache.h
 crc32.lo: crc32.h
+filesystem.lo: filesystem.h metadb_server.h $(GFUTIL_SRCDIR)/hash.h
 gfm_client.lo: $(GFUTIL_SRCDIR)/gfutil.h $(GFUTIL_SRCDIR)/hash.h $(GFUTIL_SRCDIR)/gfnetdb.h $(GFUTIL_SRCDIR)/lru_cache.h gfp_xdr.h io_fd.h sockopt.h sockutil.h host.h auth.h config.h conn_cache.h gfm_proto.h gfj_client.h xattr_info.h gfm_client.h
 gfm_schedule.lo: gfm_client.h gfm_schedule.h
 gfp_xdr.lo: $(GFUTIL_SRCDIR)/gfutil.h liberror.h iobuffer.h gfp_xdr.h
