fix distcheck error

--- a/gfarm2fs/trunk/Makefile.am
+++ b/gfarm2fs/trunk/Makefile.am
@@ -3,7 +3,7 @@ gfarm2fs_SOURCES = gfarm2fs.c acl.c id.c replicate.c open_file.c \
 	gfarm2fs.h acl.h id.h replicate.h open_file.h gfarm2fs_msg_enums.h \
 	hash.h
 man_MANS = gfarm2fs.1
-EXTRA_DIST = RELNOTES LICENSE gfarm2fs.spec $(private_srcs)
+EXTRA_DIST = RELNOTES LICENSE gfarm2fs.spec $(man_MANS) $(private_srcs)
 AM_CFLAGS = -Wall
 
 #
