--- a/gfarm2fs/trunk/Makefile.in
+++ b/gfarm2fs/trunk/Makefile.in
@@ -193,7 +193,7 @@ gfarm2fs_SOURCES = gfarm2fs.c acl.c id.c replicate.c open_file.c \
 	hash.h
 
 man_MANS = gfarm2fs.1
-EXTRA_DIST = RELNOTES LICENSE gfarm2fs.spec $(private_srcs)
+EXTRA_DIST = RELNOTES LICENSE gfarm2fs.spec $(man_MANS) $(private_srcs)
 AM_CFLAGS = -Wall
 ASSIGNMSGNO = $(top_srcdir)/msgno/assign_msgno.pl
 all: config.h
