add sanity check for user _gfarmmd to config-gfarm-update.in.

--- a/gfarm_v2/trunk/gftool/config-gfarm/config-gfarm-update.in
+++ b/gfarm_v2/trunk/gftool/config-gfarm/config-gfarm-update.in
@@ -62,6 +62,14 @@ usage()
 
 update_sanity_()
 {
+	if [ "${enable_metadata_replication}" = "yes" ]; then
+		if id _gfarmmd >/dev/null 2>&1; then :
+		else
+			echo "error: user _gfarmmd is not registered."
+			return 1
+		fi
+	fi
+
 	return 0
 }
 
