--- a/gfarm2fs/trunk/Makefile.am
+++ b/gfarm2fs/trunk/Makefile.am
@@ -1,7 +1,9 @@
-bin_PROGRAMS = gfarm2fs
+bin_PROGRAMS = gfarm2fs gfarm2fs_fix_acl
 gfarm2fs_SOURCES = gfarm2fs.c acl.c id.c replicate.c open_file.c \
 	gfarm2fs.h acl.h id.h replicate.h open_file.h gfarm2fs_msg_enums.h \
 	hash.h
+gfarm2fs_fix_acl_SOURCES = gfarm2fs_fix_acl.c acl.h gfarm2fs.h
+dist_bin_SCRIPTS = gfarm2fs_fix_acl.sh
 man_MANS = gfarm2fs.1
 EXTRA_DIST = RELNOTES LICENSE gfarm2fs.spec $(man_MANS) $(private_srcs)
 AM_CFLAGS = -Wall
