--- a/gfarm2fs/trunk/Makefile.in
+++ b/gfarm2fs/trunk/Makefile.in
@@ -58,7 +58,7 @@ am__installdirs = "$(DESTDIR)$(bindir)" "$(DESTDIR)$(bindir)" \
 	"$(DESTDIR)$(man1dir)"
 PROGRAMS = $(bin_PROGRAMS)
 am_gfarm2fs_OBJECTS = gfarm2fs.$(OBJEXT) acl.$(OBJEXT) id.$(OBJEXT) \
-	replicate.$(OBJEXT) open_file.$(OBJEXT)
+	replicate.$(OBJEXT) open_file.$(OBJEXT) xattr.$(OBJEXT)
 gfarm2fs_OBJECTS = $(am_gfarm2fs_OBJECTS)
 gfarm2fs_LDADD = $(LDADD)
 am_gfarm2fs_fix_acl_OBJECTS = gfarm2fs_fix_acl.$(OBJEXT)
@@ -231,11 +231,11 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_private_dir = @top_private_dir@
 top_srcdir = @top_srcdir@
-gfarm2fs_SOURCES = gfarm2fs.c acl.c id.c replicate.c open_file.c \
+gfarm2fs_SOURCES = gfarm2fs.c acl.c id.c replicate.c open_file.c xattr.c \
 	gfarm2fs.h acl.h id.h replicate.h open_file.h gfarm2fs_msg_enums.h \
-	hash.h
+	hash.h xattr.h
 
-gfarm2fs_fix_acl_SOURCES = gfarm2fs_fix_acl.c acl.h gfarm2fs.h
+gfarm2fs_fix_acl_SOURCES = gfarm2fs_fix_acl.c acl.h xattr.h gfarm2fs.h
 dist_bin_SCRIPTS = gfarm2fs_fix_acl.sh
 man_MANS = gfarm2fs.1
 EXTRA_DIST = RELNOTES LICENSE gfarm2fs.spec $(man_MANS) $(private_srcs)
@@ -394,6 +394,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/id.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/open_file.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/replicate.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/xattr.Po@am__quote@
 
 .c.o:
 @am__fastdepCC_TRUE@	$(COMPILE) -MT $@ -MD -MP -MF $(DEPDIR)/$*.Tpo -c -o $@ $<
