manual page for gfreg(1)

--- a/gfarm_v2/branches/2.4/doc/docbook/en/ref/man1/Makefile.inc
+++ b/gfarm_v2/branches/2.4/doc/docbook/en/ref/man1/Makefile.inc
@@ -15,6 +15,7 @@ DOCBOOK = \
 	gfmv.1 \
 	gfquota.1 \
 	gfquotacheck.1 \
+	gfreg.1 \
 	gfrep.1 \
 	gfrmdir.1 \
 	gfsched.1 \
@@ -38,7 +39,6 @@ DOCBOOK = \
 #	gfps.1 \
 #	gfpwd.1 \
 #	gfrcmd.1 \
-#	gfreg.1 \
 #	gfrm.1 \
 #	gfront.1 \
 #	gfrun.1 \
