fix #222: symlink does not work with a relative path

--- a/gfarm_v2/branches/2.4/regress/lib/libgfarm/gfarm/gfm_inode_or_name_op_test/gfm_inode_or_name_op_test.conf
+++ b/gfarm_v2/branches/2.4/regress/lib/libgfarm/gfarm/gfm_inode_or_name_op_test/gfm_inode_or_name_op_test.conf
@@ -50,7 +50,9 @@ setup_file_structure() {
 	#     $gftmp/A/AA                        : $AA_d
 	#     $gftmp/A/AA/a3                     : $a3_f
 	#     $gftmp/A/AA/a4                     : $a4_f
+	#     $gftmp/A/AA/a5                     : $a5_f
 	#     $gftmp/A/AA/toC -> $gftmp/C        : $toC_l
+	#     $gftmp/A/AA/toBB -> ../../B/BB     : $toBB_l
 	#     $gftmp/toa1 -> $gftmp/A/a1         : $toa1_l
 	#     $gftmp/B                           : $B_d
 	#     $gftmp/B/toA -> $gftmp/A           : $toA_l
@@ -58,6 +60,7 @@ setup_file_structure() {
 	#     $gftmp/B/BB                        : $BB_d
 	#     $gftmp/B/BB/toAA -> $gftmp/A/AA    : $toAA_l
 	#     $gftmp/B/BB/toa3 -> $gftmp/A/AA/a3 : $toa3_l
+	#     $gftmp/B/BB/toa5 -> ../../A/AA/a5  : $toa5_l
 	#     $gftmp/C                           : $C_d
 	#     $gftmp/C/toa4 -> $gftmp/A/AA/a4    : $toa4_l
 	#     $gftmp/C/toRoot -> /               : $toRoot
@@ -74,15 +77,18 @@ setup_file_structure() {
 	a2_f=$A_d/a2
 	a3_f=$AA_d/a3
 	a4_f=$AA_d/a4
+	a5_f=$AA_d/a5
 	NotExist_f=$gftmp/NotExist
 	LL_d=$gftmp/L/LL
 	toC_l=$AA_d/toC
+	toBB_l=$AA_d/toBB
 	toa1_l=$gftmp/toa1
 	toA_l=$B_d/toA
 	toa2_l=$B_d/toa2
 	toAA_l=$BB_d/toAA
 	toa3_l=$BB_d/toa3
 	toa4_l=$C_d/toa4
+	toa5_l=$BB_d/toa5
 	toRoot_l=$C_d/toRoot
 	toNotExist_l=$gftmp/toNotExist
 	toLL_l=$gftmp/L
@@ -97,6 +103,7 @@ setup_file_structure() {
 	reg_file a2 $a2_f
 	reg_file a3 $a3_f
 	reg_file a4 $a4_f
+	reg_file a5 $a5_f
 	exec_check_ok gfln -s $C_d        $toC_l
 	exec_check_ok gfln -s $a1_f       $toa1_l
 	exec_check_ok gfln -s $A_d        $toA_l
@@ -107,6 +114,8 @@ setup_file_structure() {
 	exec_check_ok gfln -s /           $toRoot_l
 	exec_check_ok gfln -s $NotExist_f $toNotExist_l
 	exec_check_ok gfln -s $LL_d       $toLL_l
+	exec_check_ok gfln -s ../../A/AA/a5 $toa5_l
+	exec_check_ok gfln -s ../../B/BB  $toBB_l
 }
 
 clean_file_structure() {
