sequel to r5313 and r5316: use gfs_lchown(), if it exists.
NOTE: don't use gfs_lchmod() and gfs_lutimes(), because that semantics don't
exist on Linux, and fuse example programs don't use them.

--- a/gfarm2fs/trunk/configure.ac
+++ b/gfarm2fs/trunk/configure.ac
@@ -76,7 +76,7 @@ AC_SEARCH_LIBS([fuse_opt_parse], [fuse refuse],, [AC_MSG_ERROR([libfuse not foun
 # Checks for typedefs, structures, and compiler characteristics.
 
 # Checks for library functions.
-AC_CHECK_FUNCS(gfs_replicate_file_to gfarm_schedule_cache_dump gfs_getxattr_cached gfarm_xattr_caching gfarm_xattr_caching_pattern_add)
+AC_CHECK_FUNCS(gfs_replicate_file_to gfarm_schedule_cache_dump gfs_getxattr_cached gfarm_xattr_caching gfarm_xattr_caching_pattern_add gfs_lchown)
 
 AC_TRY_RUN([
 #  include <fuse.h>
