--- a/gfarm2fs/trunk/config.h.in
+++ b/gfarm2fs/trunk/config.h.in
@@ -21,6 +21,9 @@
 /* Define to 1 if you have the `gfs_getxattr_cached' function. */
 #undef HAVE_GFS_GETXATTR_CACHED
 
+/* Define to 1 if you have the `gfs_lchown' function. */
+#undef HAVE_GFS_LCHOWN
+
 /* Define to 1 if you have the `gfs_replicate_file_to' function. */
 #undef HAVE_GFS_REPLICATE_FILE_TO
 
