--- a/gfarm_v2/trunk/include/gfarm/gfarm_config.h.in
+++ b/gfarm_v2/trunk/include/gfarm/gfarm_config.h.in
@@ -8,11 +8,11 @@
 /* Define if building universal (internal helper macro) */
 #undef AC_APPLE_UNIVERSAL_BUILD
 
+/* support metadata replication between metadata servers */
+#undef ENABLE_METADATA_REPLICATION
+
 /* support XML extended attributs and searching by XPath */
 #undef ENABLE_XMLATTR
-
-/* support metadata replication */
-#undef ENABLE_METADATA_REPLICATION
 
 /* Define to 1 if you have the <byteswap.h> header file. */
 #undef HAVE_BYTESWAP_H
@@ -46,6 +46,9 @@
 
 /* Define to 1 if you have the `getdents' function. */
 #undef HAVE_GETDENTS
+
+/* Define to 1 if you have the `getifaddrs' function. */
+#undef HAVE_GETIFADDRS
 
 /* Define to 1 if you have the `getloadavg' function. */
 #undef HAVE_GETLOADAVG
