--- a/gfarm_v2/branches/2.4/include/gfarm/gfarm_config.h.in
+++ b/gfarm_v2/branches/2.4/include/gfarm/gfarm_config.h.in
@@ -44,6 +44,9 @@
 /* Define to 1 if you have the `getdents' function. */
 #undef HAVE_GETDENTS
 
+/* Define to 1 if you have the `getifaddrs' function. */
+#undef HAVE_GETIFADDRS
+
 /* Define to 1 if you have the `getloadavg' function. */
 #undef HAVE_GETLOADAVG
 
