fix #223 (gfarm cannot be compiled on solaris 9 (SunOS 5.9) / sparc).
there are still some problems like follows, though:
  * it seems gfmd doesn't work
  * regress/lib/libgfarm/gfarm/gfarm_error_to_errno/all_mapped.sh fails
  * regress/lib/libgfarm/gfarm/gfs_replicate_file_from_to_request/file_busy/file_busy.sh fails
  * regress/lib/libgfarm/gfarm/gfs_xmlattr/gfs_xmlattr_symlink.sh fails

--- a/gfarm_v2/trunk/configure.ac
+++ b/gfarm_v2/trunk/configure.ac
@@ -121,8 +121,9 @@ void *foo(void *p){ return 0; }],[
     *-*-hpux*)
 	AC_TRY_PTHREAD(-D_POSIX_C_SOURCE=199506L -D_HPUX_SOURCE,-lpthread,);;
     *-*-solaris*)
+	# -D_POSIX_PTHREAD_SEMANTICS is for SUSv2 compliant getpwuid_r() etc.
 	if test x"$GCC" = x"yes"; then
-		AC_TRY_PTHREAD(-pthread,-pthread,)
+		AC_TRY_PTHREAD(-pthread -D_POSIX_PTHREAD_SEMANTICS,-pthread,)
 	else
 		AC_TRY_PTHREAD(-mt -D_POSIX_PTHREAD_SEMANTICS,-mt -lpthread,)
 	fi;;
@@ -1104,7 +1105,7 @@ fi
 ###### Checks for library functions.
 ######
 
-AC_CHECK_FUNCS(getdents fdatasync fdopendir poll pread pwrite snprintf getpassphrase mkdtemp setlogin strtoll strtoq setrlimit daemon getloadavg statvfs statfs random getifaddrs)
+AC_CHECK_FUNCS(getdents fdatasync fdopendir poll pread pwrite snprintf getpassphrase mkdtemp setlogin strtoll strtoq setrlimit daemon getloadavg statvfs statfs random getifaddrs getopt_long)
 
 ### Check epoll_create really implemented
 
