--- a/gfarm_v2/branches/2.4/regress/lib/libgfarm/gfarm/gfs_replicate_file_from_to_request/in_progress/Makefile
+++ b/gfarm_v2/branches/2.4/regress/lib/libgfarm/gfarm/gfs_replicate_file_from_to_request/in_progress/Makefile
@@ -7,7 +7,7 @@ include $(top_srcdir)/makes/var.mk
 PROGRAM = in_progress
 SRCS = $(PROGRAM).c
 OBJS = $(PROGRAM).o
-CFLAGS = $(COMMON_CFLAGS) -I$(GFARMLIB_SRCDIR)
+CFLAGS = $(COMMON_CFLAGS) -I$(GFARMLIB_SRCDIR) $(openssl_includes)
 LDLIBS = $(COMMON_LDLIBS) $(GFARMLIB) $(LIBS)
 DEPLIBS = $(DEPGFARMLIB)
 
