--- a/gfarm_v2/branches/2.4/include/gfarm/gfarm_config.h.in
+++ b/gfarm_v2/branches/2.4/include/gfarm/gfarm_config.h.in
@@ -50,6 +50,9 @@
 /* Define to 1 if you have the `getloadavg' function. */
 #undef HAVE_GETLOADAVG
 
+/* Define to 1 if you have the `getopt_long' function. */
+#undef HAVE_GETOPT_LONG
+
 /* Define to 1 if you have the `getpassphrase' function. */
 #undef HAVE_GETPASSPHRASE
 
